Update name in homepage header
Changed the displayed name in the main header from 'Mike' to 'Mahmoud' on index.html.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <img src="profile.jpg" alt="Picture of me">
-        <h1>Hi, my name is Mike</h1>
+        <h1>Hi, my name is Mahmoud</h1>
         <h2>Fun facts about me:</h2>
         <ul>
             <li>44 years old</li>
