Improve newsletter form input and button
Changed the email input type to 'email' for better validation and set the button type to 'submit' to ensure proper form submission.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li>Micro Photography enthusiast</li>
         </ul>
         <p>Please connect with me on <a href="https://www.linkedin.com/in/sobhy0101/" target="_blank" rel="noopener noreferrer">LinkedIn here.</a></p>
-        <input type="text" placeholder="Enter email...">
-        <button>Join newsletter</button>
+        <input type="email" placeholder="Enter email...">
+        <button type="submit">Join newsletter</button>
     </body>
 </html>
