--- a/index.html
+++ b/index.html
@@ -19,5 +19,25 @@
         <p>Please connect with me on <a href="https://www.linkedin.com/in/sobhy0101/" target="_blank" rel="noopener noreferrer">LinkedIn here.</a></p>
         <input type="email" placeholder="Enter email...">
         <button type="submit">Join newsletter</button>
+        <section class="emoji-flex">
+            <div class="item">😤</div>
+            <div class="item">😡</div>
+            <div class="item">😲</div>
+            <div class="item">🤲🏻</div>
+            <div class="item">🏷️</div>
+            <div class="item">😂</div>
+            <div class="item">😁</div>
+            <div class="item">👋🏻</div>
+            <div class="item">😢</div>
+            <div class="item">🤲🏻</div>
+            <div class="item">😂</div>
+            <div class="item">😁</div>
+            <div class="item">👋🏻</div>
+            <div class="item">😢</div>
+            <div class="item">🏷️</div>
+            <div class="item">😤</div>
+            <div class="item">😡</div>
+            <div class="item">😲</div>
+        </section>
     </body>
 </html>
