Wrap main content in container and center layout
Added a #main-container section in index.html to wrap the main content. Updated styles.css to center the container, set its width, and use flexbox for improved layout and alignment.

--- a/index.html
+++ b/index.html
@@ -8,36 +8,38 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <img src="profile.jpg" alt="Picture of me">
-        <h1>Hi, my name is Mahmoud</h1>
-        <h2>Fun facts about me:</h2>
-        <ul>
-            <li>44 years old</li>
-            <li>Live in Egypt</li>
-            <li>Micro Photography enthusiast</li>
-        </ul>
-        <p>Please connect with me on <a href="https://www.linkedin.com/in/sobhy0101/" target="_blank" rel="noopener noreferrer">LinkedIn here.</a></p>
-        <input type="email" placeholder="Enter email...">
-        <button type="submit">Join newsletter</button>
-        <section class="emoji-flex">
-            <div class="item">😤</div>
-            <div class="item">😡</div>
-            <div class="item">😲</div>
-            <div class="item">🤲🏻</div>
-            <div class="item">🏷️</div>
-            <div class="item">😂</div>
-            <div class="item">😁</div>
-            <div class="item">👋🏻</div>
-            <div class="item">😢</div>
-            <div class="item">🤲🏻</div>
-            <div class="item">😂</div>
-            <div class="item">😁</div>
-            <div class="item">👋🏻</div>
-            <div class="item">😢</div>
-            <div class="item">🏷️</div>
-            <div class="item">😤</div>
-            <div class="item">😡</div>
-            <div class="item">😲</div>
+        <section id="main-container">
+            <img src="profile.jpg" alt="Picture of me">
+            <h1>Hi, my name is Mahmoud</h1>
+            <h2>Fun facts about me:</h2>
+            <ul>
+                <li>44 years old</li>
+                <li>Live in Egypt</li>
+                <li>Micro Photography enthusiast</li>
+            </ul>
+            <p>Please connect with me on <a href="https://www.linkedin.com/in/sobhy0101/" target="_blank" rel="noopener noreferrer">LinkedIn here.</a></p>
+            <input type="email" placeholder="Enter email...">
+            <button type="submit">Join newsletter</button>
+            <section class="emoji-flex">
+                <div class="item">😤</div>
+                <div class="item">😡</div>
+                <div class="item">😲</div>
+                <div class="item">🤲🏻</div>
+                <div class="item">🏷️</div>
+                <div class="item">😂</div>
+                <div class="item">😁</div>
+                <div class="item">👋🏻</div>
+                <div class="item">😢</div>
+                <div class="item">🤲🏻</div>
+                <div class="item">😂</div>
+                <div class="item">😁</div>
+                <div class="item">👋🏻</div>
+                <div class="item">😢</div>
+                <div class="item">🏷️</div>
+                <div class="item">😤</div>
+                <div class="item">😡</div>
+                <div class="item">😲</div>
+            </section>
         </section>
     </body>
 </html>
