--- a/solo-project-hometown/index.html
+++ b/solo-project-hometown/index.html
@@ -8,47 +8,46 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <main class="container">
-            <section id="left-side">
-                <img src="images/hometown-target-design.png" alt="Torshov, Oslo">
-            </section>
             <!-- HERO SECTION -->
-            <section id="right-side">
-                <div class="hero">
-                    <h1>Visit Torshov</h1>
-                    <h2>Enjoy culture and sports in this vibrant district close to the center of Oslo.</h2>
-                </div>
-                
-                <!-- ACTIVITIES SECTION -->
-                <div class="activities">
-                    <h3>Top three activities to do at Torshov</h3>
-                    <div class="activities-container">
-                        <div class="item">
-                            <img src="https://images.unsplash.com/photo-1707068226685-27a15039f19b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cairo Museum">
-                            <h4>Visit the Egyptian Museum</h4>
-                            <p>Explore ancient artifacts and learn about Egypt's rich history.</p>
-                        </div>
-                        <div class="item">
-                            <img src="https://images.unsplash.com/photo-1628503218283-6ddeac69dfea?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Giza Pyramid Plateau">
-                            <h4>Explore the Giza Pyramid Plateau</h4>
-                            <p>Exercise the mind and body with a visit to the Giza Pyramid Plateau.</p>
-                        </div>
-                        <div class="item">
-                            <img src="https://images.unsplash.com/photo-1680053550458-d048bbf8619b?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Coptic Cairo Church">
-                            <h4>Discover Islamic and Coptic Cairo</h4>
-                            <p>Immerse yourself in the rich history and culture of Islamic and Coptic Cairo.</p>
-                        </div>
+        <section id="main-container">
+            <div class="hero">
+                <h1>Visit Torshov</h1>
+                <h2>Enjoy culture and sports in this vibrant district close to the center of Oslo.</h2>
+            </div>
+            
+            <!-- ACTIVITIES SECTION -->
+            <div class="activities">
+                <h3>Top three activities to do at Torshov</h3>
+                <div class="activities-container">
+                    <div class="item">
+                        <img src="https://images.unsplash.com/photo-1707068226685-27a15039f19b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cairo Museum">
+                        <h4>Visit the Egyptian Museum</h4>
+                        <p>Explore ancient artifacts and learn about Egypt's rich history.</p>
+                    </div>
+                    <div class="item">
+                        <img src="https://images.unsplash.com/photo-1628503218283-6ddeac69dfea?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Giza Pyramid Plateau">
+                        <h4>Explore the Giza Pyramid Plateau</h4>
+                        <p>Exercise the mind and body with a visit to the Giza Pyramid Plateau.</p>
+                    </div>
+                    <div class="item">
+                        <img src="https://images.unsplash.com/photo-1680053550458-d048bbf8619b?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Coptic Cairo Church">
+                        <h4>Discover Islamic and Coptic Cairo</h4>
+                        <p>Immerse yourself in the rich history and culture of Islamic and Coptic Cairo.</p>
                     </div>
                 </div>
+            </div>
 
-                <!-- GUIDE SECTION -->
-                <div class="guide">
-                    <h3>Your guide</h3>
-                    <p>"I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
-                    <h4>Per Harald Borgen</h4>
-                    <img src="images/per.jpg" alt="Per Harald Borgen, your guide">
+            <!-- GUIDE SECTION -->
+            <div class="guide">
+                <div class="column">
+                        <img src="images/my-profile-photo.jpg" alt="Mike Sobhy, your Front-end Developer guide">
                 </div>
-            </section>
-        </main>
+                <div class="column">
+                    <h3>Your guide</h3>
+                    <p>"I have lived at Cairo, Egypt for over 44 years, so I can show you all of its best parts and hidden secrets."</p>
+                    <h4>Mike Sobhy</h4>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
