Add favicon and remove unused images
Added a new SVG favicon and updated index.html to reference it. Removed several unused image files from the images directory to clean up the project.

--- a/solo-project-hometown/index.html
+++ b/solo-project-hometown/index.html
@@ -6,9 +6,10 @@
         <title>Visit Torshov</title>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     </head>
     <body>
-            <!-- HERO SECTION -->
+        <!-- HERO SECTION -->
         <section id="main-container">
             <div class="hero">
                 <h1>Visit Torshov</h1>
@@ -40,7 +41,7 @@
             <!-- GUIDE SECTION -->
             <div class="guide">
                 <div class="column">
-                        <img src="images/my-profile-photo.jpg" alt="Mike Sobhy, your Front-end Developer guide">
+                    <img src="images/my-profile-photo.jpg" alt="Mike Sobhy, your Front-end Developer guide">
                 </div>
                 <div class="column">
                     <h3>Your guide</h3>
