Add solo project section and update hometown project
Removed emoji section and added a new 'solo project' section to index.html, featuring a link to a fictional tourism website about Cairo. Updated solo-project-hometown to reference Cairo instead of Torshov, and improved hero section styling. Added new CSS for the solo project section and link, including hover effects.

--- a/index.html
+++ b/index.html
@@ -20,26 +20,12 @@
             <p>Please connect with me on <a href="https://www.linkedin.com/in/sobhy0101/" target="_blank" rel="noopener noreferrer">LinkedIn here.</a></p>
             <input type="email" placeholder="Enter email...">
             <button type="submit">Join newsletter</button>
-            <section class="emoji-flex">
-                <div class="item">😤</div>
-                <div class="item">😡</div>
-                <div class="item">😲</div>
-                <div class="item">🤲🏻</div>
-                <div class="item">🏷️</div>
-                <div class="item">😂</div>
-                <div class="item">😁</div>
-                <div class="item">👋🏻</div>
-                <div class="item">😢</div>
-                <div class="item">🤲🏻</div>
-                <div class="item">😂</div>
-                <div class="item">😁</div>
-                <div class="item">👋🏻</div>
-                <div class="item">😢</div>
-                <div class="item">🏷️</div>
-                <div class="item">😤</div>
-                <div class="item">😡</div>
-                <div class="item">😲</div>
-            </section>
+        </section>
+
+        <section id="solo-project">
+            <h2>My solo HTML and CSS project</h2>
+            <p>This is a project I made during the Scrimba Front-end Developer Career Path. It is a fictional tourism website about my hometown, Cairo, Egypt.</p>
+            <a href="/solo-project-hometown/index.html" target="_blank" rel="noopener noreferrer">Check it out here.</a>
         </section>
     </body>
 </html>
