--- a/solo-project-hometown/index.html
+++ b/solo-project-hometown/index.html
@@ -12,13 +12,13 @@
         <!-- HERO SECTION -->
         <section id="main-container">
             <div class="hero">
-                <h1>Visit Torshov</h1>
+                <h1>Visit Cairo</h1>
                 <h2>Enjoy culture and sports in this vibrant district close to the center of Oslo.</h2>
             </div>
             
             <!-- ACTIVITIES SECTION -->
             <div class="activities">
-                <h3>Top three activities to do at Torshov</h3>
+                <h3>Top three activities to do at Cairo</h3>
                 <div class="activities-container">
                     <div class="item">
                         <figure>
