Update solo project link to relative path
Changed the href in the solo project section to use a relative path ('./solo-project-hometown/') instead of an absolute path ('/solo-project-hometown/index.html') for improved portability.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="solo-project">
             <h2>My solo HTML and CSS project</h2>
             <p>This is a project I made during the Scrimba Front-end Developer Career Path. It is a fictional tourism website about my hometown, Cairo, Egypt.</p>
-            <a href="/solo-project-hometown/index.html" target="_blank" rel="noopener noreferrer">Check it out here.</a>
+            <a href="./solo-project-hometown/" target="_blank" rel="noopener noreferrer">Check it out here.</a>
         </section>
     </body>
 </html>
