Add social media meta tags and og-image
Added Open Graph and Twitter Card meta tags to index.html for better social media sharing. Included og-image.jpg for preview images.

--- a/solo-project-hometown/index.html
+++ b/solo-project-hometown/index.html
@@ -7,6 +7,16 @@
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:title" content="Visit Cairo">
+        <meta property="og:description" content="Explore the rich culture and history of Cairo, Egypt.">
+        <meta property="og:image" content="images/og-image.jpg">
+        <meta property="og:url" content="https://sobhy0101.github.io/learn-html-css-scrimba/solo-project-hometown/">
+        <!-- Twitter Card Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Visit Cairo">
+        <meta name="twitter:description" content="Explore the rich culture and history of Cairo, Egypt.">
+        <meta name="twitter:image" content="images/og-image.jpg">
     </head>
     <body>
         <!-- HERO SECTION -->
