Replace external images with local webp assets
Switched homepage and activity images from external Unsplash URLs to locally stored .webp files for improved performance and reliability. Updated HTML and CSS references accordingly.

--- a/solo-project-hometown/index.html
+++ b/solo-project-hometown/index.html
@@ -32,7 +32,7 @@
                 <div class="activities-container">
                     <div class="item">
                         <figure>
-                            <img src="https://images.unsplash.com/photo-1707068226685-27a15039f19b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cairo Museum - Photo by [Photographer] on Unsplash">
+                            <img src="images/egyptian-museum.webp" alt="Cairo Museum - Photo by [Photographer] on Unsplash">
                             <figcaption>Photo by [Dilip Poddar] on Unsplash</figcaption>
                         </figure>
                         <h4>Visit the Egyptian Museum</h4>
@@ -40,7 +40,7 @@
                     </div>
                     <div class="item">
                         <figure>
-                            <img src="https://images.unsplash.com/photo-1628503218283-6ddeac69dfea?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Giza Pyramid Plateau">
+                            <img src="images/giza-pyramid-plateau.webp" alt="Giza Pyramid Plateau">
                             <figcaption>Photo by [Alessandro Zanini] on Unsplash</figcaption>
                         </figure>
                         <h4>Explore the Giza Pyramid Plateau</h4>
@@ -48,7 +48,7 @@
                     </div>
                     <div class="item">
                         <figure>
-                            <img src="https://images.unsplash.com/photo-1680053550458-d048bbf8619b?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Coptic Cairo Church">
+                            <img src="images/coptic-cairo.webp" alt="Coptic Cairo Church">
                             <figcaption>Photo by [2H Media] on Unsplash</figcaption>
                         </figure>
                         <h4>Discover Islamic and Coptic Cairo</h4>
