Update social meta image URLs to absolute paths
Changed Open Graph and Twitter Card image meta tags to use absolute URLs for better compatibility when sharing the site on social platforms.

--- a/solo-project-hometown/index.html
+++ b/solo-project-hometown/index.html
@@ -10,13 +10,13 @@
         <!-- Open Graph Meta Tags -->
         <meta property="og:title" content="Visit Cairo">
         <meta property="og:description" content="Explore the rich culture and history of Cairo, Egypt.">
-        <meta property="og:image" content="images/og-image.jpg">
+        <meta property="og:image" content="https://sobhy0101.github.io/learn-html-css-scrimba/solo-project-hometown/images/og-image.jpg">
         <meta property="og:url" content="https://sobhy0101.github.io/learn-html-css-scrimba/solo-project-hometown/">
         <!-- Twitter Card Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Visit Cairo">
         <meta name="twitter:description" content="Explore the rich culture and history of Cairo, Egypt.">
-        <meta name="twitter:image" content="images/og-image.jpg">
+        <meta name="twitter:image" content="https://sobhy0101.github.io/learn-html-css-scrimba/solo-project-hometown/images/og-image.jpg">
     </head>
     <body>
         <!-- HERO SECTION -->
